tests/NormalTests/paczka1/small_fuzzy/78437390.err
Error in line 2: i9P A968 0,3
Error in line 9: oBu0lRN A615 87,83
Error in line 4: i9P S240 90,7
